# FUNSD

./: .gitignore  LICENSE  README.md  pyproject.toml
.dvc/: config
datasets/: .gitignore  FUNSD.dvc  FUNSD_plus.dvc  FUNSD_plus_konfuzio.dvc
datasets/FUNSD_SupplyChain/training/: README.md
nbs/: azure_document_analysis.ipynb  azure_document_analysis_with_key_value_pairs.ipynb  azure_generate_annotations_for_funsd_dataset.ipynb  azure_generate_annotations_for_funsd_plus_dataset.ipynb  azure_show_annotations.ipynb  funsd.ipynb  funsd_plus.ipynb
scripts/: extract_groundtruth_from_gsheet.py
src/: azure_utils.py  doctype_groundtruth.py  utils.py
